// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderLink can render as specific color 1`] = `
<button
  class="euiButtonEmpty euiHeaderLink css-1v3a3p6-empty-danger"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiHeaderLink is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonEmpty euiHeaderLink testClass1 testClass2 css-wvaqcf-empty-text"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiHeaderLink is rendered as active 1`] = `
<button
  class="euiButtonEmpty euiHeaderLink euiHeaderLink-isActive css-9t7nyf-empty-primary"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;
